# citylab_project

robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/install/robot_patrol/lib/robot_patrol/: patrol_node
robot_patrol/install/robot_patrol/share/ament_index/resource_index/package_run_dependencies/: robot_patrol
robot_patrol/launch/: main.launch.py  start_gotopose_action.launch.py  start_patrolling.launch.py
robot_patrol/log/: latest_build
robot_patrol/rviz/: patrol_config.rviz
robot_patrol/src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
robot_patrol/srv/: GetDirection.srv
